--- a/.github/workflows/ci-mod-module-template.yaml
+++ b/.github/workflows/ci-mod-module-template.yaml
@@ -1,9 +1,5 @@
+---
 name: CI module-template 🧹
-
-env:
-  DAGGER_VERSIONS: '["0.13.0", "0.13.1", "0.13.2", "0.13.3"]'
-  DAGGER_LATEST_VERSION: "0.13.3"
-
 on:
   push:
     branches:
@@ -26,20 +22,11 @@ defaults:
     working-directory: module-template
 
 jobs:
-  setup:
-    runs-on: ubuntu-latest
-    outputs:
-      dagger_versions: ${{ steps.set-matrix.outputs.dagger_versions }}
-    steps:
-      - id: set-matrix
-        run: echo "dagger_versions=${{ env.DAGGER_VERSIONS }}" >> $GITHUB_OUTPUT
-
   dagger-linter:
-    needs: setup
     strategy:
       matrix:
         go: ["1.22"]
-        dagversion: ${{ fromJson(needs.setup.outputs.dagger_versions) }}
+        dagversion: [0.13.0, 0.13.1, 0.13.2, 0.13.3]
     name: Lint module-template on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
     runs-on: ubuntu-latest
     steps:
@@ -56,7 +43,52 @@ jobs:
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      # ... (rest of the steps for this job remain the same)
+      - name: Dagger Develop on Test Module 🧪 with Dagger ${{ matrix.dagversion }}
+        uses: dagger/dagger-for-github@v6
+        with:
+          verb: develop
+          module: module-template/tests
+          version: ${{ matrix.dagversion }}
+          cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Dagger Develop on Examples Module for Go 📄 with Dagger ${{ matrix.dagversion }}
+        uses: dagger/dagger-for-github@v6
+        with:
+          verb: develop
+          module: module-template/examples/go
+          version: ${{ matrix.dagversion }}
+          cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Dagger Call on Module 📦 with Dagger ${{ matrix.dagversion }}
+        uses: dagger/dagger-for-github@v6
+        with:
+          verb: call
+          module: module-template
+          version: ${{ matrix.dagversion }}
+          cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Dagger Call on Test Module 🧪 with Dagger ${{ matrix.dagversion }}
+        uses: dagger/dagger-for-github@v6
+        with:
+          verb: call
+          module: module-template/tests
+          version: ${{ matrix.dagversion }}
+          cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Dagger Call on Test Examples/Go Module 📄 with Dagger ${{ matrix.dagversion }}
+        uses: dagger/dagger-for-github@v6
+        with:
+          verb: call
+          module: module-template/examples/go
+          version: ${{ matrix.dagversion }}
+          cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   golangci-lint:
     strategy:
@@ -69,23 +101,66 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version: ${{ matrix.go }}
-      - name: Dagger Develop on Module 📦 module-template with Dagger ${{ env.DAGGER_LATEST_VERSION }}
+
+      # Dagger main module 📦 (develop & golang ci-lint)
+      - name: Dagger Develop on Module 📦 module-template with Dagger ${{ matrix.dagversion }}
         uses: dagger/dagger-for-github@v6
         with:
           verb: develop
           module: module-template
-          version: ${{ env.DAGGER_LATEST_VERSION }}
+          version: ${{ matrix.dagversion }}
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      # ... (rest of the steps for this job remain the same)
+
+      # Install golangci-lint using curl
+      - name: Install golangci-lint
+        run: |
+          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s latest
+          sudo mv ./bin/golangci-lint /usr/local/bin/golangci-lint
+
+      - name: Run golangci-lint on module-template 📦
+        run: |
+          golangci-lint run --config=../.golangci.yml --verbose
+
+      # Dagger test module 🧪 (develop & golang ci-lint)
+      - name: Dagger Develop on Module tests 🧪 module-template with Dagger ${{ matrix.dagversion }}
+        uses: dagger/dagger-for-github@v6
+        with:
+          verb: develop
+          module: module-template/tests
+          version: ${{ matrix.dagversion }}
+          cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Run golangci-lint on module-template/tests 🧪
+        run: |
+          cd tests
+          ls -ltrah
+          golangci-lint run --config=../../.golangci.yml --verbose
+
+      # Dagger examples (go) module 📄 (develop & golang ci-lint)
+      - name: Dagger Develop on Module Examples/Go 📄 module-template with Dagger ${{ matrix.dagversion }}
+        uses: dagger/dagger-for-github@v6
+        with:
+          verb: develop
+          module: module-template/examples/go
+          version: ${{ matrix.dagversion }}
+          cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Run golangci-lint on module-template/examples/go 📄 (develop & golang ci-lint)
+        run: |
+          cd examples/go
+          ls -ltrah
+          golangci-lint run --config=../../../.golangci.yml --verbose
 
   module-test:
-    needs: setup
     strategy:
       matrix:
         go: ["1.22"]
-        dagversion: ${{ fromJson(needs.setup.outputs.dagger_versions) }}
+        dagversion: [0.13.0, 0.13.1, 0.13.2, 0.13.3]
+    needs: [dagger-linter, golangci-lint]
     name: Run Tests 🧪 in module-template on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
     runs-on: ubuntu-latest
     steps:
@@ -102,26 +177,55 @@ jobs:
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      # ... (rest of the steps for this job remain the same)
+      - name: Dagger Develop on Test Module 🧪 with Dagger ${{ matrix.dagversion }}
+        uses: dagger/dagger-for-github@v6
+        with:
+          verb: develop
+          module: module-template/tests
+          version: ${{ matrix.dagversion }}
+          cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Running Tests 💣 in module-template on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
+        uses: dagger/dagger-for-github@v6
+        with:
+          verb: call
+          args: test-all
+          module: module-template/tests
+          version: ${{ matrix.dagversion }}
+          cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   module-template-recipes-go:
     strategy:
       matrix:
         go: ["1.22"]
-    name: Run recipes 🥗 in module-template/examples/go on ${{ matrix.os }} with Dagger ${{ env.DAGGER_LATEST_VERSION }}
+        dagversion: [0.13.3]
+    needs: [dagger-linter, golangci-lint]
+    name: Run recipes 🥗 in module-template/examples/go on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
           go-version: ${{ matrix.go }}
-      - name: Dagger Develop on Module Examples 📄 with Dagger ${{ env.DAGGER_LATEST_VERSION }}
+      - name: Dagger Develop on Module Examples 📄 with Dagger ${{ matrix.dagversion }}
         uses: dagger/dagger-for-github@v6
         with:
           verb: develop
           module: module-template/examples/go
-          version: ${{ env.DAGGER_LATEST_VERSION }}
+          version: ${{ matrix.dagversion }}
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      # ... (rest of the steps for this job remain the same)
+      - name: Running Recipes all recipes 💣 in module-template/examples/go on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
+        uses: dagger/dagger-for-github@v6
+        with:
+          verb: call
+          args: all-recipes
+          module: module-template/examples/go
+          version: ${{ matrix.dagversion }}
+          cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
