--- a/.daggerx/daggy/Cargo.toml
+++ b/.daggerx/daggy/Cargo.toml
@@ -8,3 +8,4 @@ clap = { version = "4.5.7", features = ["derive"] }
 serde = { version = "1.0.203", features = ["derive"] }
 regex = "1.10.5"
 serde_json = "1.0.121"
+pathdiff = "0.2.1"
