--- a/.daggerx/daggy/Cargo.toml
+++ b/.daggerx/daggy/Cargo.toml
@@ -9,3 +9,4 @@ serde = { version = "1.0.203", features = ["derive"] }
 regex = "1.10.5"
 serde_json = "1.0.121"
 pathdiff = "0.2.1"
+walkdir = "2.3.3"
