--- a/terragrunt/config/presets/base-alpine.yaml
+++ b/terragrunt/config/presets/base-alpine.yaml
@@ -69,6 +69,12 @@ paths:
     uid: 65532
     gid: 65532
     permissions: 0o755
+  # Default /mnt directory
+  - path: /mnt
+    type: directory
+    uid: 65532
+    gid: 65532
+    permissions: 0o755
 
 annotations:
   title: Base Alpine for Terragrunt
