--- a/.github/workflows/ci-mod-module-template-light.yaml
+++ b/.github/workflows/ci-mod-module-template-light.yaml
@@ -17,6 +17,9 @@ permissions:
     pull-requests: read
     checks: write
 
+env:
+    DAGGER_VERSION_EXAMPLES_GO: 0.13.5
+
 defaults:
     run:
         working-directory: module-template-light
@@ -209,23 +212,23 @@ jobs:
             - uses: actions/checkout@v4
             - uses: actions/setup-go@v5
               with:
-                  go-version: ${{ matrix.go }}
-            - name: Dagger Develop on Module Examples 📄 with Dagger ${{ matrix.dagversion }}
+                  go-version: '1.22'
+            - name: Dagger Develop on Module Examples 📄
               uses: dagger/dagger-for-github@v6
               with:
                   verb: develop
                   module: module-template-light/examples/go
-                  version: ${{ matrix.dagversion }}
+                  version: ${{ env.DAGGER_VERSION_EXAMPLES_GO }}
                   cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            - name: Running Recipes all recipes 💣 in module-template-light/examples/go on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
+            - name: Running Recipes all recipes 💣 in module-template-light/examples/go
               uses: dagger/dagger-for-github@v6
               with:
                   verb: call
                   args: all-recipes
                   module: module-template-light/examples/go
-                  version: ${{ matrix.dagversion }}
+                  version: ${{ env.DAGGER_VERSION_EXAMPLES_GO }}
                   cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
