feat: Update base Alpine and Wolfi APKO presets
- Improve formatting and consistency of YAML files
- Update version information in annotations
- Adjust user/group settings for terragrunt user
- Minor formatting updates to .gitignore and Terraform version constraint

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,171 +1,171 @@
 ---
 run:
-  tests: false
-  modules-download-mode: readonly
-  timeout: 2m
-  concurrency: 2
+    tests: false
+    modules-download-mode: readonly
+    timeout: 2m
+    concurrency: 2
 linters-settings:
-  gomoddirectives:
-    replace-allow-list:
-      - go.opentelemetry.io/otel/exporters/otlp/otlplog/otlploggrpc
-      - go.opentelemetry.io/otel/exporters/otlp/otlplog/otlploghttp
-      - go.opentelemetry.io/otel/log
-      - go.opentelemetry.io/otel/sdk/log
-  depguard:
-    rules:
-      Rule not allowed packages:
-        files: [.*]
-        deny:
-          - pkg: notexist
-            desc: notexist is not allowed or blacklisted
-  gocyclo:
-    min-complexity: 15
-  goconst:
-    min-len: 5
-    min-occurrences: 3
-  gocritic:
-    settings:
-      rangeValCopy:
-        sizeThreshold: 1024
-    enabled-tags:
-      - diagnostic
-      - experimental
-      - opinionated
-      - performance
-      - style
-    disabled-checks:
-      - singleCaseSwitch
-      - hugeParam
-      - appendCombine
-      - commentedOutCode
-  funlen:
-    lines: 140
-    statements: 52
+    gomoddirectives:
+        replace-allow-list:
+            - go.opentelemetry.io/otel/exporters/otlp/otlplog/otlploggrpc
+            - go.opentelemetry.io/otel/exporters/otlp/otlplog/otlploghttp
+            - go.opentelemetry.io/otel/log
+            - go.opentelemetry.io/otel/sdk/log
+    depguard:
+        rules:
+            Rule not allowed packages:
+                files: [.*]
+                deny:
+                    - pkg: notexist
+                      desc: notexist is not allowed or blacklisted
+    gocyclo:
+        min-complexity: 15
+    goconst:
+        min-len: 5
+        min-occurrences: 3
+    gocritic:
+        settings:
+            rangeValCopy:
+                sizeThreshold: 1024
+        enabled-tags:
+            - diagnostic
+            - experimental
+            - opinionated
+            - performance
+            - style
+        disabled-checks:
+            - singleCaseSwitch
+            - hugeParam
+            - appendCombine
+            - commentedOutCode
+    funlen:
+        lines: 140
+        statements: 52
 linters:
-  enable:
-    - bodyclose
-    - dogsled
-    - dupl
-    - errcheck
-    - funlen
-    - goconst
-    - gocritic
-    - gofmt
-    - gosec
-    - gosimple
-    - nakedret
-    - copyloopvar
-    - staticcheck
-    - stylecheck
-    - typecheck
-    - unconvert
-    - whitespace
-    - govet
-    - revive
-    - depguard
-  disable:
-    - gci
-    - gofumpt
-    - exhaustruct
-    - mnd
-  presets:
-    - bugs
-    - comment
-    - complexity
-    - error
-    - format
-    - import
-    - metalinter
-    - module
-    - performance
-    - sql
-    - style
-    - test
-    - unused
-issues:
-  max-issues-per-linter: 0
-  max-same-issues: 0
-  exclude-dirs-use-default: true
-  exclude:
-    - abcdef
-  exclude-rules:
-    # Disable goimports linter for specific files
-    - linters:
-        - goimports
-      text: File is not `goimports`-ed
-      path: ^.*config\.go$
-    - linters:
-        - goimports
-      text: File is not `goimports`-ed
-      path: ^.*main\.go$
-    - linters:
-        - goimports
-      text: File is not `goimports`-ed
-      path: ^.*apis\.go$
-    # Disable gofmt linter for specific files
-    - linters:
-        - gofmt
-      text: File is not `gofmt`-ed with `-s`
-      path: ^.*config\.go$
-    - linters:
-        - gofmt
-      text: File is not `gofmt`-ed with `-s`
-      path: ^.*main\.go$
-    - linters:
-        - gofmt
-      text: File is not `gofmt`-ed with `-s`
-      path: ^.*apis\.go$
-    - path: _test\.go
-      linters:
-        - gocyclo
-        - errcheck
+    enable:
+        - bodyclose
+        - dogsled
         - dupl
-        - gosec
-    - path: main.go
-      linters:
-        - unused
+        - errcheck
+        - funlen
         - goconst
+        - gocritic
+        - gofmt
         - gosec
-    - path-except: _test\.go
-      linters:
-        - forbidigo
-    - path: internal/hmac/
-      text: weak cryptographic primitive
-      linters:
-        - gosec
-    - linters:
+        - gosimple
+        - nakedret
+        - copyloopvar
         - staticcheck
-      text: "SA9003:"
-    - linters:
-        - lll
-      source: "^//go:generate "
-    - linters:
-        - revive
-      text: don't use underscores in Go names
-      path: main\.go$
-    - linters:
         - stylecheck
-      text: "ST1003: should not use underscores in Go names"
-      path: main\.go$
+        - typecheck
+        - unconvert
+        - whitespace
+        - govet
+        - revive
+        - depguard
+    disable:
+        - gci
+        - gofumpt
+        - exhaustruct
+        - mnd
+    presets:
+        - bugs
+        - comment
+        - complexity
+        - error
+        - format
+        - import
+        - metalinter
+        - module
+        - performance
+        - sql
+        - style
+        - test
+        - unused
+issues:
+    max-issues-per-linter: 0
+    max-same-issues: 0
+    exclude-dirs-use-default: true
+    exclude:
+        - abcdef
+    exclude-rules:
+    # Disable goimports linter for specific files
+        - linters:
+              - goimports
+          text: File is not `goimports`-ed
+          path: ^.*config\.go$
+        - linters:
+              - goimports
+          text: File is not `goimports`-ed
+          path: ^.*main\.go$
+        - linters:
+              - goimports
+          text: File is not `goimports`-ed
+          path: ^.*apis\.go$
+    # Disable gofmt linter for specific files
+        - linters:
+              - gofmt
+          text: File is not `gofmt`-ed with `-s`
+          path: ^.*config\.go$
+        - linters:
+              - gofmt
+          text: File is not `gofmt`-ed with `-s`
+          path: ^.*main\.go$
+        - linters:
+              - gofmt
+          text: File is not `gofmt`-ed with `-s`
+          path: ^.*apis\.go$
+        - path: _test\.go
+          linters:
+              - gocyclo
+              - errcheck
+              - dupl
+              - gosec
+        - path: main.go
+          linters:
+              - unused
+              - goconst
+              - gosec
+        - path-except: _test\.go
+          linters:
+              - forbidigo
+        - path: internal/hmac/
+          text: weak cryptographic primitive
+          linters:
+              - gosec
+        - linters:
+              - staticcheck
+          text: 'SA9003:'
+        - linters:
+              - lll
+          source: '^//go:generate '
+        - linters:
+              - revive
+          text: don't use underscores in Go names
+          path: main\.go$
+        - linters:
+              - stylecheck
+          text: 'ST1003: should not use underscores in Go names'
+          path: main\.go$
 
-  exclude-use-default: false
-  exclude-case-sensitive: false
-  exclude-dirs:
-    - ^internal/
-    - ^querybuilder/
-    - ^dagger/
-    - ^telemetry/
-    - ^.devenv/
-    - ^.direnv/
-    - ^.aider.tags.cache.v3
-  exclude-files:
-    - ^querybuilder/.+\.go
-    - dagger.gen.go
+    exclude-use-default: false
+    exclude-case-sensitive: false
+    exclude-dirs:
+        - ^internal/
+        - ^querybuilder/
+        - ^dagger/
+        - ^telemetry/
+        - ^.devenv/
+        - ^.direnv/
+        - ^.aider.tags.cache.v3
+    exclude-files:
+        - ^querybuilder/.+\.go
+        - dagger.gen.go
 output:
-  print-issued-lines: true
-  print-linter-name: true
-  sort-results: true
-  formats:
-    - format: colored-line-number
-      path: stdout
+    print-issued-lines: true
+    print-linter-name: true
+    sort-results: true
+    formats:
+        - format: colored-line-number
+          path: stdout
 #    - format: checkstyle
