--- a/module-template-light/tests/testdata/apko-presets/base-alpine.yaml
+++ b/module-template-light/tests/testdata/apko-presets/base-alpine.yaml
@@ -1,49 +1,49 @@
 ---
 contents:
-  repositories:
-    - https://dl-cdn.alpinelinux.org/alpine/edge/main
-    - https://dl-cdn.alpinelinux.org/alpine/edge/community
-  packages:
-    - alpine-baselayout
-    - alpine-keys
-    - apk-tools
-    - busybox
-    - ca-certificates-bundle
-    - musl
-    - curl
-    - bash
-    - wget
-    - unzip
-    - git
-    - tzdata
-    - openssl
+    repositories:
+        - https://dl-cdn.alpinelinux.org/alpine/edge/main
+        - https://dl-cdn.alpinelinux.org/alpine/edge/community
+    packages:
+        - alpine-baselayout
+        - alpine-keys
+        - apk-tools
+        - busybox
+        - ca-certificates-bundle
+        - musl
+        - curl
+        - bash
+        - wget
+        - unzip
+        - git
+        - tzdata
+        - openssl
 
 accounts:
-  groups:
-    - groupname: terragrunt
-      gid: 65532
-  users:
-    - username: terragrunt
-      uid: 65532
-      gid: 65532
-  run-as: terragrunt
+    groups:
+        - groupname: terragrunt
+          gid: 65532
+    users:
+        - username: terragrunt
+          uid: 65532
+          gid: 65532
+    run-as: terragrunt
 
 entrypoint:
-  command: /bin/bash -l
+    command: /bin/bash -l
 
 # cmd: /bin/sh -l
 
 archs:
-  - x86_64
-  - aarch64
+    - x86_64
+    - aarch64
 
 environment:
-  PATH: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/home/terragrunt/bin:/home/terragrunt/.local/bin
-  TERRAGRUNT_PROVIDER_CACHE_DIR: /home/terragrunt/.terragrunt-cache
-  TERRAGRUNT_PROVIDER_CACHE: "1"
-  TZ: UTC
-  LANG: en_US.UTF-8
-  LC_ALL: en_US.UTF-8
+    PATH: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/home/terragrunt/bin:/home/terragrunt/.local/bin
+    TERRAGRUNT_PROVIDER_CACHE_DIR: /home/terragrunt/.terragrunt-cache
+    TERRAGRUNT_PROVIDER_CACHE: '1'
+    TZ: UTC
+    LANG: en_US.UTF-8
+    LC_ALL: en_US.UTF-8
 
 # # Ensure home directory exists and is writable
 # paths:
@@ -64,10 +64,10 @@ environment:
 #       permissions: 0o755
 
 annotations:
-  title: Base Alpine for Terragrunt
-  description: A minimal Alpine base image built with APKO for Terragrunt, optimized for security and performance.
-  version: 1.1.0
-  vendor: github.com/Excoriate - Alex Torres
-  licenses: Apache-2.0
-  url: https://github.com/Excoriate/daggerverse
-  source: https://github.com/Excoriate/daggerverse
+    title: Base Alpine for Terragrunt
+    description: A minimal Alpine base image built with APKO for Terragrunt, optimized for security and performance.
+    version: 1.1.0
+    vendor: github.com/Excoriate - Alex Torres
+    licenses: Apache-2.0
+    url: https://github.com/Excoriate/daggerverse
+    source: https://github.com/Excoriate/daggerverse
