--- a/.daggerx/daggy/Cargo.toml
+++ b/.daggerx/daggy/Cargo.toml
@@ -10,3 +10,7 @@ regex = "1.10.5"
 serde_json = "1.0.121"
 pathdiff = "0.2.1"
 walkdir = "2.3.3"
+similar = "2.2.1"
+prettytable-rs = "0.10.0"
+diffy = "0.3"
+ 
