fix: Update Dagger version to 0.13.7 in CI workflow
The commit updates the Dagger version used in the CI workflow from 0.13.6 to 0.13.7 for the gotest job. This change is made in two places in the `.github/workflows/ci-mod-gotest.yaml` file.

--- a/.github/workflows/ci-mod-gotest.yaml
+++ b/.github/workflows/ci-mod-gotest.yaml
@@ -29,7 +29,7 @@ jobs:
     strategy:
       matrix:
         go: ["1.22"]
-        dagversion: [0.13.6, 0.13.7]
+        dagversion: [0.13.7]
     name: Lint gotest on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
     runs-on: ubuntu-latest
     steps:
@@ -162,7 +162,7 @@ jobs:
     strategy:
       matrix:
         go: ["1.22"]
-        dagversion: [0.13.6, 0.13.7]
+        dagversion: [0.13.7]
     needs: [dagger-linter, golangci-lint]
     name: Run Tests 🧪 in gotest on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
     runs-on: ubuntu-latest
