--- a/.github/workflows/ci-mod-gotest.yaml
+++ b/.github/workflows/ci-mod-gotest.yaml
@@ -30,7 +30,7 @@ jobs:
       matrix:
         go: ["1.22"]
         dagversion: [0.13.7]
-    name: Lint gotest on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
+    name: Lint gotest on ${{ matrix.go }} with Dagger ${{ matrix.dagversion }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -164,7 +164,7 @@ jobs:
         go: ["1.22"]
         dagversion: [0.13.7]
     needs: [dagger-linter, golangci-lint]
-    name: Run Tests 🧪 in gotest on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
+    name: Run Tests 🧪 in gotest on ${{ matrix.go }} with Dagger ${{ matrix.dagversion }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -189,7 +189,7 @@ jobs:
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Running Tests 💣 in gotest on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
+      - name: Running Tests 💣 in gotest on ${{ matrix.go }} with Dagger ${{ matrix.dagversion }}
         uses: dagger/dagger-for-github@v6
         with:
           verb: call
@@ -206,7 +206,7 @@ jobs:
         go: ["1.22"]
         dagversion: [0.13.7]
     needs: [dagger-linter, golangci-lint]
-    name: Run recipes 🥗 in gotest/examples/go on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
+    name: Run recipes 🥗 in gotest/examples/go on ${{ matrix.go }} with Dagger ${{ matrix.dagversion }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
