--- a/.github/workflows/ci-mod-module-template-light.yaml
+++ b/.github/workflows/ci-mod-module-template-light.yaml
@@ -18,7 +18,7 @@ permissions:
     checks: write
 
 env:
-    DAGGER_VERSION_EXAMPLES_GO: 0.13.5
+    DAGGER_VERSION_EXAMPLES_GO: 0.13.7
 
 defaults:
     run:
@@ -29,7 +29,7 @@ jobs:
         strategy:
             matrix:
                 go: ['1.22']
-                dagversion: [0.13.4, 0.13.5]
+                dagversion: [0.13.6, 0.13.7]
         name: Lint module-template-light on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
         runs-on: ubuntu-latest
         steps:
@@ -116,7 +116,7 @@ jobs:
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-          # Install golangci-lint using curl
+      # Install golangci-lint using curl
             - name: Install golangci-lint
               run: |
                   curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s latest
@@ -162,9 +162,9 @@ jobs:
         strategy:
             matrix:
                 go: ['1.22']
-                dagversion: [0.13.4, 0.13.5]
+                dagversion: [0.13.6, 0.13.7]
         needs: [dagger-linter, golangci-lint]
-        name: Run Tests 🧪 in module-template-light on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
+        name: Run Tests 🧪 in module-template-light on ${{ matrix.go }} with Dagger ${{ matrix.dagversion }}
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v4
@@ -189,7 +189,7 @@ jobs:
                   cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            - name: Running Tests 💣 in module-template-light on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
+            - name: Running Tests 💣 in module-template-light on ${{ matrix.go }} with Dagger ${{ matrix.dagversion }}
               uses: dagger/dagger-for-github@v6
               with:
                   verb: call
@@ -204,9 +204,9 @@ jobs:
         strategy:
             matrix:
                 go: ['1.22']
-                dagversion: [0.13.5]
+                dagversion: [0.13.7]
         needs: [dagger-linter, golangci-lint]
-        name: Run recipes 🥗 in module-template-light/examples/go on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
+        name: Run recipes 🥗 in module-template-light/examples/go on ${{ matrix.go }} with Dagger ${{ matrix.dagversion }}
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v4
