ci: Update Dagger workflow to use correct workdir (#281)
The changes in this commit update the Dagger workflow to use the correct `workdir` parameter instead of the `module` parameter. This ensures that the Dagger commands are executed in the correct directory for the examples, tests, and main module.

--- a/.github/workflows/ci-mod-templates.yaml
+++ b/.github/workflows/ci-mod-templates.yaml
@@ -66,7 +66,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  dagger-call:
+  dagger-list-functions:
     needs: dagger-build
     strategy:
       matrix:
@@ -83,9 +83,8 @@ jobs:
       - name: 📦 List Main Module Functions
         uses: dagger/dagger-for-github@v6
         with:
-          # Empty call to list functions
-          call:
-          module: ${{ matrix.module }}
+          verb: call
+          workdir: ${{ matrix.module }}
           version: ${{ env.DAGGER_VERSION }}
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         env:
@@ -94,9 +93,8 @@ jobs:
       - name: 🧪 List Test Module Functions
         uses: dagger/dagger-for-github@v6
         with:
-          # Empty call to list functions
-          call:
-          module: ${{ matrix.module }}/tests
+          verb: call
+          workdir: ${{ matrix.module }}/tests
           version: ${{ env.DAGGER_VERSION }}
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         env:
@@ -105,9 +103,8 @@ jobs:
       - name: 📄 List Example Module Functions
         uses: dagger/dagger-for-github@v6
         with:
-          # Empty call to list functions
-          call:
-          module: ${{ matrix.module }}/examples/go
+          verb: call
+          workdir: ${{ matrix.module }}/examples/go
           version: ${{ env.DAGGER_VERSION }}
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         env:
