ci: Update Dagger GitHub Actions workflow
The changes in this commit update the Dagger GitHub Actions workflow for the module templates. The key changes are:

- Update the `verb` and `args` parameters for the Dagger actions to improve consistency and clarity.
- Ensure the `module` parameter is set correctly for each Dagger action.
- Add the `.github/workflows/ci-mod-templates.yaml` file to the workflow trigger to ensure the workflow runs when this file is updated.

These changes aim to improve the reliability and maintainability of the module template CI workflow.

--- a/.github/workflows/ci-mod-templates.yaml
+++ b/.github/workflows/ci-mod-templates.yaml
@@ -11,6 +11,7 @@ on:
     paths:
       - "module-template/**"
       - "module-template-light/**"
+      - ".github/workflows/ci-mod-templates.yaml"
   workflow_dispatch:
 
 permissions:
@@ -84,7 +85,8 @@ jobs:
         uses: dagger/dagger-for-github@v6
         with:
           verb: call
-          workdir: ${{ matrix.module }}
+          args: ""
+          module: ${{ matrix.module }}
           version: ${{ env.DAGGER_VERSION }}
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         env:
@@ -94,7 +96,8 @@ jobs:
         uses: dagger/dagger-for-github@v6
         with:
           verb: call
-          workdir: ${{ matrix.module }}/tests
+          args: ""
+          module: ${{ matrix.module }}/tests
           version: ${{ env.DAGGER_VERSION }}
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         env:
@@ -104,7 +107,8 @@ jobs:
         uses: dagger/dagger-for-github@v6
         with:
           verb: call
-          workdir: ${{ matrix.module }}/examples/go
+          args: ""
+          module: ${{ matrix.module }}/examples/go
           version: ${{ env.DAGGER_VERSION }}
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         env:
@@ -127,7 +131,8 @@ jobs:
       - name: 💣 Run All Tests
         uses: dagger/dagger-for-github@v6
         with:
-          call: test-all
+          verb: call
+          args: test-all
           module: ${{ matrix.module }}/tests
           version: ${{ env.DAGGER_VERSION }}
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
@@ -151,7 +156,8 @@ jobs:
       - name: 🥗 Run All Example Recipes
         uses: dagger/dagger-for-github@v6
         with:
-          call: all-recipes
+          verb: call
+          args: all-recipes
           module: ${{ matrix.module }}/examples/go
           version: ${{ env.DAGGER_VERSION }}
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
