feat: List main module functions in CI workflow
Adds the `verb: call` option to the Dagger for GitHub action in the CI workflow to list the main functions of the specified module. This provides more visibility into the module's functionality during the CI process.

--- a/.github/workflows/ci-mod-templates.yaml
+++ b/.github/workflows/ci-mod-templates.yaml
@@ -84,7 +84,8 @@ jobs:
       - name: 📦 List Main Module Functions
         uses: dagger/dagger-for-github@v6
         with:
-          module: ${{ matrix.module }}
+          workdir: ${{ matrix.module }}
+          verb: call
           version: ${{ env.DAGGER_VERSION }}
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         env:
