feat: Add module parameter to dagger-for-github action
Adds the `module` parameter to the `dagger-for-github` action in the CI workflow. This ensures that the correct module directory is used when calling the Dagger action.

--- a/.github/workflows/ci-mod-templates.yaml
+++ b/.github/workflows/ci-mod-templates.yaml
@@ -85,6 +85,7 @@ jobs:
         uses: dagger/dagger-for-github@v6
         with:
           workdir: ${{ matrix.module }}
+          module: .
           verb: call
           version: ${{ env.DAGGER_VERSION }}
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
