feat: Update CI workflow to use correct module path
The changes in this commit update the CI workflow to use the correct module path when calling the Dagger module. Previously, the `module` input was set to the matrix variable `${{ matrix.module }}`, which was incorrect. The updated configuration sets the `workdir` input to `${{ matrix.module }}` and the `module` input to `.`, which ensures the Dagger module is correctly referenced from the workflow.

--- a/.github/workflows/ci-mod-templates.yaml
+++ b/.github/workflows/ci-mod-templates.yaml
@@ -85,7 +85,8 @@ jobs:
         uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
         with:
           verb: call
-          module: ${{ matrix.module }}
+          workdir: ${{ matrix.module }}
+          module: .
           version: ${{ env.DAGGER_VERSION }}
           cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
         env:
